--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
   <script src="https://use.fontawesome.com/9c086fd07c.js"></script>
-  <script type="text/javascript" src="placeholder.js"></script>
+  <script type="text/javascript" src="recipieJS.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
@@ -26,10 +26,6 @@
         <div class="panel-heading"><i class="fa fa-hand-spock-o" aria-hidden="true"></i> Enter Your Search Here</div>
           <div class="panel-body">
             <form>
-              <div class="form-group">
-                <label for="searchTerm">Search Term:</label>
-                <input type="text" class="form-control" id="searchTerm" placeholder="Search Term">
-              </div>
 
               <div class="form-group">
                 <label for="numRecipes">How Many Recipes do you want?</label>
@@ -37,13 +33,18 @@
               </div>
 
               <div class="form-group">
-                <label for="startDate">Start Year (optional):</label>
-                <input type="text" class="form-control" id="startDate" >
+                <label for="ingredient">Ingredient:</label>
+                <input type="text" class="form-control" id="ingredient" placeholder="Search Term">
               </div>
 
               <div class="form-group">
-                <label for="endDate">End Year (optional):</label>
-                <input type="text" class="form-control" id="endDate" >
+                <label for="ingredientTwo">Ingredient Two (optional):</label>
+                <input type="text" class="form-control" id="ingredientTwo" >
+              </div>
+
+              <div class="form-group">
+                <label for="ingredientThree">Ingredient Three (optional):</label>
+                <input type="text" class="form-control" id="ingredientThree" >
               </div>
 
              
