added cards/ word wrap

--- a/index.html
+++ b/index.html
@@ -59,7 +59,21 @@
       <div class="panel panel-default">
         <div class="panel-heading"><i class="fa fa-hand-spock-o" aria-hidden="true"></i> Search Results</div>
           <div class="panel-body" id="searchResults">
-           
+
+           <div class="recipeCard" id="card">
+            <section class="section">
+                <h1 class="title">Card</h1>
+              </div>
+            </section>
+
+            <div class="recipeCard2" id="card">
+              <section class="section">
+                  <h1 class="title">Card</h1>
+                </div>
+              </section>
+
+            </div>
+           </div>
           </div>
       </div>
       </div>
