--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <div class="container">
     <div class="row"> 
 
-      <div class="jumbotron text-center">
-        <h1><i class="fa fa-hand-spock-o" aria-hidden="true"></i> Reci-pie</h1>
+      <div class="jumbotron text-left">
+        <h1><i class="fa fa-hand-spock-o" aria-hidden="true"></i> Reci-Pie</h1>
       </div>
     </div>
 
