--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
-  <script src="https://use.fontawesome.com/9c086fd07c.js"></script>
   <script type="text/javascript" src="recipieJS.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
@@ -15,15 +14,15 @@
   <div class="container">
     <div class="row"> 
 
-      <div class="jumbotron text-center">
-        <h1><i class="fa fa-hand-spock-o" aria-hidden="true"></i> Reci-pie</h1>
+      <div class="jumbotron text-left">
+        <h1><img src="Assets/Icon150.png"></i> Reci-Pie</h1>
       </div>
     </div>
 
     <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-3">
       <div class="panel panel-default">
-        <div class="panel-heading"><i class="fa fa-hand-spock-o" aria-hidden="true"></i> Enter Your Search Here</div>
+        <div class="panel-heading"><img src="Assets/icon2150.png" style="width: 20px;height: 20px;"></i> Enter Your Search Here</div>
           <div class="panel-body">
             <form>
 
@@ -57,7 +56,7 @@
 
     <div class="col-xs-12 col-sm-12 col-md-9">
       <div class="panel panel-default">
-        <div class="panel-heading"><i class="fa fa-hand-spock-o" aria-hidden="true"></i> Search Results</div>
+        <div class="panel-heading"><img src="Assets/icon2150.png" style="width: 20px;height: 20px;"></i> Search Results</div>
           <div class="panel-body" id="searchResults">
 
            <div class="recipeCard" id="card">
