--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <div class="row"> 
 
       <div class="jumbotron text-left">
-        <h1><img src="Assets/Icon150.png"></i> Reci-Pie</h1>
+        <h1><img src="Assets/Icon150.png" alt="Pie With Slice"></i> Reci-Pie</h1>
       </div>
     </div>
 
     <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-3">
       <div class="panel panel-default">
-        <div class="panel-heading"><img src="Assets/icon2150.png" style="width: 20px;height: 20px;"></i> Enter Your Search Here</div>
+        <div class="panel-heading"><img src="Assets/icon2150.png" style="width: 20px;height: 20px;" alt="Pie"></i> Enter Your Search Here</div>
           <div class="panel-body">
             <form>
 
@@ -56,7 +56,7 @@
 
     <div class="col-xs-12 col-sm-12 col-md-9">
       <div class="panel panel-default">
-        <div class="panel-heading"><img src="Assets/icon2150.png" style="width: 20px;height: 20px;"></i> Search Results</div>
+        <div class="panel-heading"><img src="Assets/icon2150.png" style="width: 20px;height: 20px;" alt="Pie"></i> Search Results</div>
           <div class="panel-body" id="searchResults">
 
            <div class="recipeCard" id="card">
