--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Recipe Generator</title>
@@ -11,11 +12,12 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.4/dist/css/bulma-carousel.min.css" />
   <script defer src="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.4/dist/js/bulma-carousel.min.js"></script>
-  
+
 </head>
+
 <body>
   <div class="container">
-    <div class="row"> 
+    <div class="row">
 
       <div class="jumbotron text-left">
         <h1><img src="Assets/Icon150.png" alt="Pie with Slice"></i> Reci-Pie</h1>
@@ -23,9 +25,10 @@
     </div>
 
     <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-3">
-      <div class="panel panel-default">
-        <div class="panel-heading"><img src="Assets/icon2150.png" style="width: 20px;height: 20px;" alt="Pie"></i> Enter Your Search Here</div>
+      <div class="col-xs-12 col-sm-12 col-md-3">
+        <div class="panel panel-default">
+          <div class="panel-heading"><img src="Assets/icon2150.png" style="width: 20px;height: 20px;" alt="Pie"></i>
+            Enter Your Search Here</div>
           <div class="panel-body">
             <form>
 
@@ -41,120 +44,106 @@
 
               <div class="form-group">
                 <label for="ingredientThree">Ingredient Three (optional):</label>
-                <input type="text" class="form-control" id="ingredientThree" placeholder="apple,orange, etc." >
+                <input type="text" class="form-control" id="ingredientThree" placeholder="apple,orange, etc.">
               </div>
 
-             
+
               <button type="submit" class="btn btn-default submit">Submit</button>
               <button type="reset" class="btn btn-default reset">Clear Form</button>
             </form>
           </div>
+        </div>
       </div>
-    </div>
 
-    <div class="col-xs-12 col-sm-12 col-md-9">
-      <div class="panel panel-default">
-        <div class="panel-heading"><img src="Assets/icon2150.png" style="width: 20px;height: 20px;" alt="Pie"></i> Search Results</div>
+      <div class="col-xs-12 col-sm-12 col-md-9">
+        <div class="panel panel-default">
+          <div class="panel-heading"><img src="Assets/icon2150.png" style="width: 20px;height: 20px;" alt="Pie"></i>
+            Search Results
+          </div>
           <div class="panel-body" id="searchResults">
-
-           <div class="recipeCard" id="card">
-            <section class="section">
+            <div class="recipeCard" id="card">
+              <section class="section">
                 <h1 class="title"></h1>
-                <ul id = "recipeList">
-
-                </ul>
-              </div>
-            </section>
+              </section>
 
             </div>
-           </div>
-          </div>
-      </div>
-      </div>
-    </div>
-  </div>
-  <section class="section">
-    <div id="slider">
-      <div class="card">
-        <div class="card-image">
-          <figure class="image is-16by9 is-covered">
-            <img
-              src="https://images.unsplash.com/photo-1550930516-af8b8cc4f871?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80"
-              alt=""
-            />
-          </figure>
-        </div>
-        <div class="card-content">
-          <div class="item__title">
-            Mon titre 5
-          </div>
-          <div class="item__description">
-            Ici une petite description pour tester le slider
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-image" >
-          <figure class="image is-16by9 is-covered">
+            <ul id="ingredientList">
 
-          </figure>
-        </div>
-        <div class="card-content">
-          <div class="item__title">
-            Mon titre 4
-          </div>
-          <div class="item__description">
-            Ici une petite description pour tester le slider
-          </div>
-        </div>
-      </div>
-      
+            </ul>
+            <ul id="stepList">
 
-      <div class="card">
-        <div class="card-image">
-          <figure class="image is-16by9 is-covered" id="cardTwo">
-
-          </figure>
-        </div>
-        <div class="card-content">
-          <div class="item__title">
-            Mon titre 5
-          </div>
-          <div class="item__description">
-            Ici une petite description pour tester le slider
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-image">
-          <figure class="image is-16by9 is-covered" id="cardThree">
-          </figure>
-        </div>
-        <div class="card-content">
-          <div class="item__title">
-            Mon titre 5
-          </div>
-          <div class="item__description">
-            Ici une petite description pour tester le slider
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-image">
-          <figure class="image is-16by9 is-covered" id="cardFour">
-          </figure>
-        </div>
-        <div class="card-content">
-          <div class="item__title">
-            Mon titre 5
-          </div>
-          <div class="item__description">
-            Ici une petite description pour tester le slider
+            </ul>
           </div>
         </div>
       </div>
     </div>
+    <section class="section">
+      <div id="slider">
+
+        <div class="card">
+          <div class="card-image">
+            <figure class="image is-16by9 is-covered" id="cardOne">
+
+            </figure>
+          </div>
+          <div class="card-content">
+            <div id="titleOne" class="item__title">
+            </div>
+
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image">
+            <figure class="image is-16by9 is-covered" id="cardTwo">
+
+            </figure>
+          </div>
+          <div class="card-content">
+            <div id="titleTwo" class="item__title">
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image">
+            <figure class="image is-16by9 is-covered" id="cardThree">
+            </figure>
+          </div>
+          <div class="card-content">
+            <div id="titleThree" class="item__title">
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image">
+            <figure class="image is-16by9 is-covered" id="cardFour">
+            </figure>
+          </div>
+          <div class="card-content">
+            <div id="titleFour" class="item__title">
+            </div>
+          </div>
+        </div>
+
+
+        <div class="card">
+          <div class="card-image">
+            <figure class="image is-16by9 is-covered" id="cardFive">
+            </figure>
+          </div>
+          <div class="card-content">
+            <div id="titleFive" class="item__title">
+            </div>
+          </div>
+        </div>
+      </div>
+  
   </section>
+
+</div>
   <script type="text/javascript" src="recipieJS.js"></script>
 </body>
+
 </html>
