--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
           </div>
           <div class="panel-body" id="searchResults">
             <div class="recipeCard" id="card">
-              <section class="section">
-                <h1 class="title"></h1>
-              </section>
+              <h1 class="title"></h1>
+              <ul id="ingredientList">
 
+              </ul>
             </div>
-            <ul id="ingredientList">
+            </br>
+            </br>
 
-            </ul>
-            <ul id="stepList">
+            <ol id="stepList">
 
-            </ul>
+            </ol>
           </div>
         </div>
       </div>
@@ -137,12 +137,14 @@
             <div id="titleFive" class="item__title">
             </div>
           </div>
+
         </div>
       </div>
-  
-  </section>
+    </section>
 
-</div>
+
+
+  </div>
   <script type="text/javascript" src="recipieJS.js"></script>
 </body>
 
