Added directions and ingredients titles

--- a/index.html
+++ b/index.html
@@ -62,13 +62,14 @@
           </div>
           <div class="panel-body" id="searchResults">
             <div class="recipeCard" id="card">
-              <h1 class="title"></h1>
+              <br>
+              <h2 class="ingredients">Ingredients</h1>
               <ul id="ingredientList">
-
               </ul>
             </div>
             </br>
             </br>
+            <h2 class="directions">Directions</h1>
 
             <ol id="stepList">
 
